--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
     "ConnectionStrings": {
-        "DefaultConnection": "Server=LAPTOP-L96AKFUV;Database=WebApiDB;Trusted_Connection=True;MultipleActiveResultSets=true"
+        "DefaultConnection": "Data Source=LAPTOP-L96AKFUV;Initial Catalog=TareasDB;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False; user id=sa; password=2027"
     },
     "Logging": {
         "LogLevel": {
